--- a/package.json
+++ b/package.json
@@ -14,82 +14,59 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.18.1",
     "rxjs": "^5.4.2",
     "velocity-animate": "^1.5.0",
-    "vue": "^2.3.3",
+    "vue": "^2.3.4",
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "autoprefixer": "^7.1.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-plugin-try-catch-wrapper": "^0.2.2",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chai": "^3.5.0",
-    "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
-    "compression-webpack-plugin": "^1.0.0",
+    "chalk": "^1.1.3",
+    "compression-webpack-plugin": "^0.4.0",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
-    "cssnano": "^3.10.0",
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.2.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-vue": "^3.11.0",
+    "css-loader": "^0.28.4",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
-    "mocha": "^3.2.0",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "function-bind": "^1.0.2",
+    "happypack": "^4.0.0-beta.1",
+    "html-webpack-plugin": "^2.29.0",
+    "http-proxy-middleware": "^0.17.4",
+    "image-webpack-loader": "^3.3.0",
+    "json-loader": "^0.5.4",
+    "lodash.throttle": "^4.1.1",
+    "md5": "^2.2.1",
     "mockjs": "^1.0.1-beta3",
-    "nightwatch": "^0.9.12",
+    "ncp": "^2.0.0",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
+    "ora": "^1.3.0",
+    "prettier": "^1.6.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
-    "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
+    "shelljs": "^0.7.8",
+    "url-loader": "^0.5.9",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^12.2.1",
     "vue-resource": "^1.3.4",
+    "vue-router": "^2.6.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack": "^3.0.0",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   },
