--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -15,8 +15,8 @@
     "128": "static/img/icon128.png"
   },
   "background": {
-    "scripts": ["./static/js/manifest.js","./static/js/vendor.js","./static/js/background.js"],
-    "persistent": true
+    "scripts": ["./static/js/manifest.js", "./static/js/vendor.js", "./static/js/eventPage.js"],
+    "persistent": false
   },
   "browser_action": {
     "default_icon": {
@@ -32,16 +32,13 @@
     "proxy",
     "notifications",
     "storage",
-    "webRequest",
-    "webRequestBlocking",
     "webNavigation",
     "contextMenus",
     "<all_urls>"
   ],
   "externally_connectable": {
     "matches": [
-      "*://localhost/*",
-
+      "*://localhost/*"
     ]
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
