--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "big.js": "^3.2.0",
     "crypto-js": "^3.1.9-1",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.18.1",
+    "querystring": "^0.2.0",
     "rxjs": "^5.4.2",
     "velocity-animate": "^1.5.0",
     "vue": "^2.3.4",
