--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -15,8 +15,8 @@
     "128": "static/img/icon128.png"
   },
   "background": {
-    "scripts": ["./static/js/manifest.js", "./static/js/vendor.js", "./static/js/eventPage.js"],
-    "persistent": false
+    "scripts": ["./static/js/manifest.js", "./static/js/vendor.js", "./static/js/bigInt.js", "./static/js/barret.js", "./static/js/rsa.js", "./static/js/eventPage.js"],
+    "persistent": true
   },
   "browser_action": {
     "default_icon": {
