--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "big.js": "^3.2.0",
     "crypto-js": "^3.1.9-1",
+    "jquery": "^3.2.1",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.18.1",
     "querystring": "^0.2.0",
