整理网易请求逻辑

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -23,8 +23,7 @@
       "19": "static/img/icon19.png",
       "38": "static/img/icon38.png"
     },
-    "default_title": "playlist-sync",
-    "default_popup": "index.html"
+    "default_title": "playlist-sync"
   },
   "permissions": [
     "cookies",
