--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "big.js": "^3.2.0",
     "crypto-js": "^3.1.9-1",
     "jquery": "^3.2.1",
